--- a/package.json
+++ b/package.json
@@ -10,10 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/drawer": "^7.5.2",
+    "@react-navigation/native": "^7.1.13",
+    "@react-navigation/native-stack": "^7.3.21",
+    "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.0.0",
     "expo": "~53.0.12",
+    "expo-document-picker": "~13.1.6",
+    "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.5",
     "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react-native": "0.79.4",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
