--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.0",
+    "eas": "^0.1.0",
     "expo": "~53.0.12",
+    "expo-dev-client": "~5.2.4",
     "expo-document-picker": "~13.1.6",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
     "expo-status-bar": "~2.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
@@ -32,8 +34,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-linear-gradient": "~14.1.5"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
